--- a/src/styles.css
+++ b/src/styles.css
@@ -12,16 +12,22 @@ label {
 html {
   box-sizing: border-box;
 }
+
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
+body {
+  background-color: #1a1e1f;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 .App {
   font-family: sans-serif;
   text-align: center;
@@ -31,6 +37,26 @@ table {
   display: flex;
 }
 
+.flex1 {
+  flex: 1;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-around {
+  justify-content: space-around;
+}
+
+.flex-between {
+  justify-content: space-between;
+}
+
+.flex-center {
+  justify-content: center;
+}
+
 .flex-column {
   flex-direction: column;
 }
@@ -38,4 +64,115 @@ table {
 .marginTopBtm10 {
   margin-top: 10px !important;
   margin-bottom: 10px !important;
+}
+
+.margin1020 {
+  margin: 10px 20px;
+}
+
+.marginTop10 {
+  margin-top: 10px !important;
+}
+
+.marginBottom10 {
+  margin-bottom: 10px !important;
+}
+
+.app-wrap {
+  height: 100vh;
+  margin: 0px auto;
+  max-width: 420px;
+  background-color: #fff;
+}
+
+.bold,
+.bold span,
+.bold td {
+  font-weight: bold !important;
+}
+
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  max-width: 420px;
+  width: 100%;
+  text-align: center;
+}
+
+a.icon-link {
+  color: white;
+}
+
+.center {
+  text-align: center;
+}
+
+.height100 {
+  height: calc(100vh - 56px);
+}
+
+.noTBpad {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+.pad10 {
+  padding: 10px;
+}
+
+.pad15 {
+  padding: 15px;
+}
+
+.padBtm20 {
+  padding-bottom: 20px;
+}
+
+.padBtm10 {
+  padding-bottom: 10px;
+}
+
+.pad1020 {
+  padding: 10px 20px;
+}
+
+.padLR10 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.scoreboard-wrap {
+  display: flex;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  padding: 10px 15px 0 15px;
+  justify-content: space-between;
+}
+
+.scoreboard-team {
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.scoreboard-overs {
+  display: flex;
+  font-weight: 300;
+}
+
+.scoreboard-score {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.scoreboard-wrap.previous .scoreboard-team,
+.scoreboard-wrap.previous .scoreboard-score {
+  font-size: 16px;
+}
+
+.run-btn {
+  margin: 0 5px 5px !important;
+  min-width: 20px !important;
 }
